src/np222kk/dv507/a2/test/cases/negative/test_string_02.ofp
void main() {
    string str = "Hello";
    str = str + "World";
    
}